--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Week 4 Debug</title>
 </head>
 <body>
+    <script src="app.js"></script>
     <div class="main-container">
         <h1>Space X Rockets</h1>
         <button id="btn">Get all rockets</button>
@@ -17,6 +18,5 @@
         </div>
 
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
